[tool.poetry]
name = "panion-ds-infra-cdk"
version = "0.1.0"
description = ""
authors = ["alfonsosastre <alfonso.sastre@panion.org>"]

[tool.poetry.dependencies]
python = "^3.9"
"aws-cdk.core" = "^1.133.0"
"aws-cdk.pipelines" = "^1.133.0"
"aws-cdk.aws-s3" = "^1.133.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
